# accessibility-devkit

./: .eslintrc.cjs  .gitignore  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  cspell.json  package.json  pnpm-lock.yaml  tsconfig.base.json
.changeset/: config.json  wide-domain-coverage.md
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: 01-philosophy.md  02-why-not-overlays.md  03-layered-approach.md
examples/: accessible-component-review.md
python/: README.md  pyproject.toml
python/src/accessibility_devkit/: __init__.py  cli.py  core.py  report.py  scanner.py
python/tests/: test_core.py  test_scanner.py
scripts/: check-packages.mjs
skills/accessibility/: SKILL.md
skills/accessibility-business/: SKILL.md
skills/accessibility-design/: SKILL.md
skills/accessibility-gaming/: SKILL.md
skills/accessibility-mobile/: SKILL.md
skills/accessibility/references/: alt-text.md
spec/: report.schema.json
spec/fixtures/: static-mixed.expected.json  static-mixed.html
tests/consumers/: commonjs.cjs  esm.mjs  tsconfig.json  types.ts
tests/contracts/: report-parity.test.mjs
tests/docs/: adoption-quick-start.test.mjs
tests/plugin/: accessibility-scenarios.test.mjs  alt-text-guidance.test.mjs  specialists.test.mjs
tests/plugin/fixtures/: accessibility-review-scenarios.v1.json  alt-text-scenarios.v1.json
