[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "accessibility-devkit"
version = "1.1.0"
description = "Portable accessibility checks with explicit manual-review boundaries."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Luke Steuber", email = "luke@lukesteuber.com" }]
keywords = ["accessibility", "a11y", "wcag", "testing", "cli"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/actually-useful-ai/accessibility-devkit"
Issues = "https://github.com/actually-useful-ai/accessibility-devkit/issues"
Documentation = "https://github.com/actually-useful-ai/accessibility-devkit#readme"

[project.scripts]
accessibility-devkit = "accessibility_devkit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/accessibility_devkit"]
